--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "linkedinroaster",
   "version": "1.0.0",
-  "description": "",
+  "description": "An API Service that can roast your linkedIn Profile using Gemini AI Service and build with Express.js",
   "main": "index.js",
+  "author": "Yogi Bagus",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,9 +16,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-rate-limit": "^7.4.0",
-    "linkedin-profile-scraper": "^2.3.1",
-    "node-fetch": "^3.3.2",
-    "nodemon": "^3.1.4"
+    "express-rate-limit": "^7.4.0"
   }
 }
