--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "description": "An API Service that can roast your linkedIn Profile using Gemini AI Service and build with Express.js",
   "main": "index.js",
-  "author": "Yogi Bagus",
+  "author": "",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
   "engines": {
     "node": "20.x"
   },
@@ -20,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-rate-limit": "^7.4.0"
+    "express-rate-limit": "^7.4.0",
+    "request-ip": "^3.3.0"
   }
 }
