--- a/.env copy
+++ b/.env copy
@@ -1,3 +1,7 @@
 GEMINI_API_KEY=<YOUR_GEMINI_API_KEY>
 LI_AT_COOKIE=<YOUR_LI_AT>
 PORT=<YOUR_PORT>
+
+#Database MongoDB
+MONGO_URI=<YOUR_MONGO_URI>
+MONGO_DB=<YOUR_DB>
