--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.0",
-    "request-ip": "^3.3.0"
+    "mongoose": "^8.5.2",
+    "mongose": "^0.0.2-security",
+    "request-ip": "^3.3.0",
+    "ua-parser-js": "^1.0.38"
   }
 }
