--- a/.env copy
+++ b/.env copy
@@ -5,3 +5,8 @@ PORT=<YOUR_PORT>
 #Database MongoDB
 MONGO_URI=<YOUR_MONGO_URI>
 MONGO_DB=<YOUR_DB>
+
+#Database Redis
+REDIS_HOST=<YOUR_REDIS_HOST>
+REDIS_PORT=<YOUR_REDIS_PORT>
+REDIS_PASSWORD=<YOUR_REDIS_PASSWORD>
