--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.16.0",
     "axios": "^1.7.3",
+    "bull": "^4.16.0",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -22,6 +23,7 @@
     "express-rate-limit": "^7.4.0",
     "mongoose": "^8.5.2",
     "mongose": "^0.0.2-security",
+    "redis": "^4.7.0",
     "request-ip": "^3.3.0",
     "ua-parser-js": "^1.0.38"
   }
