add allowed origin

--- a/.env copy
+++ b/.env copy
@@ -1,6 +1,6 @@
 GEMINI_API_KEY=<YOUR_GEMINI_API_KEY>
-LI_AT_COOKIE=<YOUR_LI_AT>
 PORT=<YOUR_PORT>
+ALLOWED_ORIGINS=<YOUR_ALLOWED_ORIGINS>
 
 #Database MongoDB
 MONGO_URI=<YOUR_MONGO_URI>
